--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "finetune language models"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "unsloth[cu124-torch260]",
+    "unsloth[cu124-torch260]==2025.5.2",
+    "unsloth-zoo==2025.5.4",
     "trl",
     "docx2txt",
     "setuptools",
@@ -14,5 +15,5 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-unsloth = { git = "https://github.com/unslothai/unsloth.git" }
-unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo.git" }
+# unsloth = { git = "https://github.com/unslothai/unsloth.git" }
+# unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo.git" }
