--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "llmcompressor",
     "numpy>=2.2.3",
     "vllm",
+    "ray",
     "docx2txt",
     "setuptools",
     "openai",
