--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ dependencies = [
     "unsloth[cu124-torch260]==2025.5.2",
     "unsloth-zoo==2025.5.4",
     "trl",
-    "llmcompressor",
-    "vllm",
+    "vllm>=0.8.5",
     "ray",
+    "llmcompressor",
     "docx2txt",
     "setuptools",
     "openai",
